# whisper

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.yml  go.mod  go.sum  main.go
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  docker.yml  go-test.yml  manual-deploy.yml  rust-test.yml
cmd/server/: main.go
cmd/wasm/: main.go
docs/: docker-compose.aws.yml  docker-compose.gcp.yml  docker-compose.local.yml
internal/config/: app.go  app_test.go  storage.go  storage_test.go
internal/handlers/: common.go  common_test.go  decrypt.go  decrypt_test.go  encrypt.go  encrypt_test.go  testhelpers_test.go
internal/middleware/: compression.go  compression_test.go
internal/storage/: storage.go
internal/storage/mock/: mock_storage.go
internal/storage/provider/aws/: dynamo.go  (+1 more)
internal/storage/types/: interfaces.go
pkg/client/: client.go  client_test.go  crypto.go  doc.go
pkg/ots_dynamo/: ots_dynamo.go
pkg/ots_firestore/: ots_firestore.go
pkg/ots_gcs/: ots_gcs.go
pkg/ots_s3/: ots_s3.go
pkg/routes/: decrypt.go  encrypt.go  routes_test.go
pkg/simple_crypt/: simple_crypt.go  simple_crypt_test.go
pkg/storage/: storage.go  storage_test.go
pkg/storage/mock/: mock_storage.go
pkg/storage/types/: interfaces.go
pkg/utils/: utils.go  utils_test.go
static/: main.js  site.css
views/: files.html  index.html  layout.html  secret.html
wasm/: Cargo.toml
wasm/src/: lib.rs  tests.rs
web/static/: main.js  site.css  toast.js
web/templates/: index.html  layout.html  secret.html
(+15 files in other folders)
