[package]
name = "whisper-crypto"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.113"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
serde_json = "1"
hex = "0.4"

console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
